--- a/blocks/add-card/__button/add-card__button.css
+++ b/blocks/add-card/__button/add-card__button.css
@@ -14,3 +14,11 @@
   opacity: .6;
   cursor: pointer;
 }
+
+@media screen and (max-width: 400px) {
+  .add-card__button {
+    width: 50px;
+    height: 30px;
+    color: transparent;
+  }
+}
