--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,8 +1,16 @@
 .card__image {
   width: 180px;
   height: 120px;
-  margin-right: 40px;
+  margin-right: 10px;
   object-fit: cover;
 
   border: 1px solid grey;
+}
+
+@media screen and (max-width: 400px) {
+  .card__image {
+    width: 90px;
+    height: 60px;
+    margin-right: 5px;
+  }
 }
