--- a/blocks/card/__number/card__number.css
+++ b/blocks/card/__number/card__number.css
@@ -9,5 +9,13 @@
   text-align: center;
   padding-top: 6px;
   margin-left: 40px;
+}
 
+@media screen and (max-width: 400px) {
+  .card__number {
+    font-size: 14px;
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+  }
 }
