realized drag and drop

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -19,6 +19,11 @@
   animation: showBlock 1s linear forwards;
 }
 
+.card:hover {
+  opacity: .9;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 400px) {
   .card {
     width: 300px;
